--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title>{{App}}</title>
+  <title>MetApp</title>
 </head>
 
 <body>
@@ -9,6 +9,11 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+
+  <script
+  src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.12/howler.core.min.js"
+  crossorigin="anonymous"></script>
+
 <!--
   The nav bar that will be updated as we navigate between views.
 -->
@@ -22,5 +27,4 @@
   have templates inline in this html file if you'd like).
 -->
 <ion-nav-view></ion-nav-view>
-
 </body>
